<resources>
    <string name="app_name">My Reading Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_book_manu_item">add_new_book_manu_item</string>
    <string name="enter_book_title">enter_book_title</string>
    <string name="enter_book_author">enter_book_author</string>
    --Givens
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register New User</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="invalid_name">Invalid Name</string>

    <string name="login_screen_title">login</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_book_detail">BookDetail</string>
    <string name="title_activity_chellenge">ChellengeActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_challenge">Challenge</string>
    <string name="title_pages">Pages</string>
    <string name="title_profile">Me</string>
    <string name="add_pages">Add pages</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_prompt">Please input your account email address in the field below and follow instructions in the email.</string>
    <string name="pages_ive_read">Pages I have read</string>
    <string name="register_new_user">Register New User</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="prompt_date_of_birth">Date of Birth</string>
    <string name="pick_date">Pick Date</string>
    <string name="welcome_to_reading_challenge">Welcome to reading challenge</string>
    <string name="age">Age</string>
    <string name="awards">Awards</string>
    <string name="pages_added">Pages added: %d</string>
    <string name="pages_log_cancelled">Last pages log cancelled</string>
</resources>
