<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ie.ul.serge.limerickreaders.My_Book_Activity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_new_book"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/add_new_book_manu_item"
        android:icon="@android:drawable/ic_menu_add"
        />
    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never"

        />
</menu>