<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookview_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_reading_challenge"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:src="@drawable/animated_book_image"-->
            <!--android:id="@+id/animated_book_image"-->
            <!--/>-->


    <AutoCompleteTextView
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:shadowColor="@android:color/white"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:shadowColor="@android:color/white"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"/>

    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_text_custom"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:onClick="handleSignIn"/>

    <!--<Button-->
        <!--style="?android:textAppearanceSmall"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:background="@color/colorPrimaryDark"-->
        <!--android:text="@string/action_sign_up"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textStyle="bold"-->
        <!--android:onClick="handleSignUp"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/reset_password_Textview"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/register_Textview"
        android:layout_height="wrap_content"
        android:text="@string/register_new_user"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="handleRegister"/>

</LinearLayout>