<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserDetails"
    tools:showIn="@layout/activity_user_details"
    android:orientation="vertical"
    android:background="@drawable/bookview_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="6dp">


    <ImageView
        android:padding="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/cud_user_imageView"
        android:layout_gravity="center"
        android:src="@drawable/user_new"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/name"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cud_userNameTextview"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/input_text_custom"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/age"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cud_userAgeTextview"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@drawable/input_text_custom"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/awards"
        android:gravity="center"
        android:textColor="@color/white"
            android:layout_marginTop="15dp"/>


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:paddingHorizontal="6dp"


            />

        />

    </LinearLayout>

</LinearLayout>